--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-3">
-        <div class="about-media"> <img src="img/IMG_0820.jpeg" alt=" "> </div>
+        <div class="about-media"> <img src="IMG_0820.jpeg" alt=" "> </div>
         <div class="about-desc">
           <h3>Hardscaping</h3>
           
