--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="col-md-3 text-center">
-        <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
+        <div class="service-media"> <img src="service-4.jpg" alt=" "> </div>
         <div class="service-desc">
           <h3>Spring & Fall Cleanup</h3>
           <p>As the seasons change, we help you prepare your garden and landscape for the upcoming months. We offer trimming, pruning, and mulching to promote healthy growth and enhance curb appeal. Let us take the hassle out of seasonal cleanup, so you can enjoy a pristine and inviting outdoor space all year round!</p>
