--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <div class="hover-text">
                 <h4>Lava Rock</h4>
               </div>
-              <img src="IMG_0614.jpeg" class="img-responsive" alt="Lava Rock"> </a> </div>
+              <img src="IMG_0614.jpeg" class="img-responsive" alt="Lava Rocks"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 planting">
@@ -190,7 +190,7 @@
               <div class="hover-text">
                 <h4>Concrete Patio</h4>
               </div>
-              <img src="IMG_0820.jpeg" class="img-responsive" alt="Concrete Patio/Seating Wall"> </a> </div>
+              <img src="IMG_0820.jpeg" class="img-responsive" alt="Concrete Patio with Seating Wall"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 garden">
